--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,5 @@
 @import url('./base/reset.css');
 @import url('./base/base.css');
-@import url('./layout.css');
+@import url('./layout/layout.css');
 @import url('./components/buttons.css');
 @import url('./themes/dark_mode.css');
