--- a/src/css/layout/layout.css
+++ b/src/css/layout/layout.css
@@ -2,11 +2,15 @@
 
 #header {
   padding: 1.2rem 5rem;
+  align-items: center;
+  justify-content: space-between;
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
   -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
 }
-
+body{
+   transition: .3s;
+}
 .container {
   padding: var(--space-lg);
   margin: 3rem auto;
