--- a/src/css/themes/dark_mode.css
+++ b/src/css/themes/dark_mode.css
@@ -34,3 +34,8 @@ input[type='checkbox'] {
 .hidden {
   display: none;
 }
+body.dark_mode #header {
+  box-shadow: 0px 2px 3px 0px #eeecec69;
+  -webkit-box-shadow: 0px 2px 3px 0px #eeecec69;
+  -moz-box-shadow: 0px 2px 3px 0px #eeecec69;
+}
