feat disable e enable add lista altera css para desativar e ativar botao adiciona titulos e label para melhora acessibilidade modifica arquivos js separando as responsabilidades

--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -12,6 +12,10 @@
   background-color: var(--gray7);
   color: var(--gray2);
 }
+#add-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
 .btn .icon {
   font-size: 1.8rem;
 }
