--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -1,16 +1,15 @@
 @import url('../templates/layout.css');
 
-#main {
+#main .viewport_box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
-
   margin-top: 3.6rem;
 }
 
-#listEmpty {
+#wrapper_lists .empty {
   display: flex;
   flex-direction: column;
   gap: var(--space-sm);
@@ -18,24 +17,24 @@
   justify-content: center;
 }
 
-#listEmpty .icon {
+#wrapper_lists .empty .icon {
   font-size: 5.6rem;
   color: inherit;
 }
 
-#listEmpty h1 {
+#wrapper_lists .empty h1 {
   color: var(--red-dark);
   font-size: 2.4rem;
   font-weight: bold;
 }
 
-#listEmpty p,
-#listEmpty p strong {
+#wrapper_lists .empty p,
+#wrapper_lists .empty p strong {
   text-align: center;
   font-weight: 500;
 }
 
-#listEmpty p strong {
+#wrapper_lists .empty p strong {
   text-align: center;
   font-weight: 700;
 }
@@ -53,16 +52,16 @@
 }
 
 @media (min-width: 1024px) {
-  #listEmpty {
+  #wrapper_lists .empty {
     gap: var(--space-lg);
   }
 
-  #listEmpty h1 {
+  #wrapper_lists .empty h1 {
     font-size: 3.2rem;
   }
 
-  #listEmpty p,
-  #listEmpty p strong {
+  #wrapper_lists .empty p,
+  #wrapper_lists .empty p strong {
     font-size: 1.8rem;
   }
 }
