--- a/src/css/templates/header.css
+++ b/src/css/templates/header.css
@@ -1,10 +1,12 @@
 #header {
-  padding: 1.2rem 2rem;
-  align-items: center;
-  justify-content: space-between;
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
   -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
+}
+#header .viewport_box {
+  padding: 1.2rem 2rem;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /* logo */
@@ -22,9 +24,3 @@
 #header .logo {
   font-size: 4rem;
 }
-
-@media (min-width: 1024px) {
-  #header {
-    padding: 1.8rem 10rem;
-  }
-} 
