--- a/src/css/components/modal.css
+++ b/src/css/components/modal.css
@@ -19,9 +19,9 @@
 
 .modal__content {
   position: fixed;
-  background-color: var(--white);
+  background-color: var(--color-bg-secondary);
+  color: var(--color-text-primary);
   width: calc(100vw);
-  color: var(--gray1);
   margin: 0 auto;
   bottom: 0;
   left: 0;
@@ -30,45 +30,48 @@
   border-top-left-radius: var(--radius-md);
   border-top-right-radius: var(--radius-md);
   z-index: 1001;
-  padding: var(--space-lg);
+  padding: var(--space-md);
   animation: fadeIn 0.3s ease-out;
 }
 
 .modal__content h2 {
   font-size: 18px;
   font-weight: bold;
-  border-bottom: 1px solid var(--gray4);
+  border-bottom: 1px solid var(--color-border);
+
 }
 
 .modal__content label {
   font-size: 14px;
   font-weight: 600;
-  margin-top: 2.8rem;
-  margin-bottom: .5rem;
+  margin-top: var(--space-md);
+  margin-bottom: var(--space-xxs);
   display: block;
 }
 
 .modal__content input[type="text"] {
   width: 100%;
-  padding: 12px;
   font-size: 14px;
-  border: 1px solid var(--gray4);
-  border-radius: 8px;
+  border-radius: var(--radius-sm);
   transition: all .2s;
+  padding: var(--space-xs);
+  border: 1px solid var(--color-border);
 }
+
 .modal__content input[type="text"]:focus {
-  outline: 1px solid var(--gray3);
+  border-color: var(--color-border);
 }
+
 .modal__content input[type="text"].error {
-  outline: 2px solid var(--red-dark);
-  border: 0;
+  outline: 2px solid var(--color-danger);
+  outline-offset: 0;
   margin-bottom: 0;
 }
 
 .modal__content__close {
   position: absolute;
-  right: 10px;
-  top: 10px;
+  right: var(--space-sm);
+  top: var(--space-xs);
   cursor: pointer;
   font-size: 2.4rem;
   background: transparent;
@@ -76,9 +79,11 @@
 }
 
 .modal__content__close:hover {
-  color: var(--red-dark);
+  color: var(--color-danger);
 }
-
+.modal_footer{
+  text-align: end;
+}
 /* Animação de aparecimento */
 @keyframes fadeIn {
   from {
@@ -97,7 +102,8 @@
     position: relative;
     width: calc(100vw - 30%);
     margin: 7rem auto;
-    border: 1px solid var(--gray4);
+    border: 1px solid var(--color-border);
+
     border-radius: var(--radius-md);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     height: 30rem;
@@ -107,6 +113,6 @@
 
 @media (min-width: 1024px) {
   .modal__content {
-    padding: 2.5rem;
+    padding: var(--space-md);
   }
 }
