--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,2 +1,3 @@
-@import url('./base/base.css');
+@import url('./globals/base.css');
+@import url('./globals/colors.css');
 @import url('./pages/home.css');
