--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -1,4 +1,64 @@
 @import url('../templates/layout.css');
+@import url('../components/listView.css');
+.empty {
+  width: 100%;
+  height: 100%;
+  margin-top: 2.4rem;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-sm);
+  align-items: center;
+  justify-content: center;
+}
+
+.empty .icon {
+  font-size: 5.6rem;
+}
+
+.empty h1 {
+  color: var(--color-danger);
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+
+.empty p,
+.empty p strong {
+  text-align: center;
+  font-weight: 500;
+}
+
+.empty p strong {
+  text-align: center;
+  font-weight: 700;
+}
+
+.boxImage {
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+}
+
+.boxImage img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.wrapper_search {
+  display: flex;
+  justify-content: flex-end;
+  gap: var(--space-sm);
+  width: 100%;
+  padding: var(--space-xxs);
+}
+
+.wrapper_search input {
+  display: flex;
+  flex: 1;
+  border-radius: var(--radius-sm);
+  padding: var(--space-xs);
+  visibility: hidden;
+}
 
 #main .viewport_box {
   display: flex;
@@ -9,59 +69,17 @@
   margin-top: 3.6rem;
 }
 
-#wrapper_lists .empty {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-sm);
-  align-items: center;
-  justify-content: center;
-}
-
-#wrapper_lists .empty .icon {
-  font-size: 5.6rem;
-  color: inherit;
-}
-
-#wrapper_lists .empty h1 {
-  color: var(--red-dark);
-  font-size: 2.4rem;
-  font-weight: bold;
-}
-
-#wrapper_lists .empty p,
-#wrapper_lists .empty p strong {
-  text-align: center;
-  font-weight: 500;
-}
-
-#wrapper_lists .empty p strong {
-  text-align: center;
-  font-weight: 700;
-}
-
-.boxImage {
-  width: 400px;
-  height: 250px;
-  overflow: hidden;
-}
-
-.boxImage img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+#wrapper_lists::-webkit-scrollbar {
+  display: none;
 }
 
 @media (min-width: 1024px) {
-  #wrapper_lists .empty {
-    gap: var(--space-lg);
-  }
-
-  #wrapper_lists .empty h1 {
+  .empty h1 {
     font-size: 3.2rem;
   }
 
-  #wrapper_lists .empty p,
-  #wrapper_lists .empty p strong {
+  .empty p,
+  .empty p strong {
     font-size: 1.8rem;
   }
 }
