--- a/src/css/templates/layout.css
+++ b/src/css/templates/layout.css
@@ -1,19 +1,22 @@
-@import url('./header.css');
 @import url('../components/button.css');
-@import url('../components/circle.css');
+@import url('../components/navbar.css');
+@import url('../components/toggleTheme.css');
 @import url('../components/icon.css');
 @import url('../components/dropdown.css');
 @import url('../components/line.css');
 @import url('../components/modal.css');
-@import url('../themes/dark_mode.css');
-@import url('./lists.css');
+@import url('./header.css');
 
 .flex {
   display: flex;
 }
 
+.flex_columns {
+  flex-direction: column;
+}
+
 .error {
-  color: var(--red-dark);
+  color: var(--color-danger);
   font-size: 14px;
   padding: .4rem;
   display: block;
@@ -24,109 +27,22 @@
 }
 
 .viewport_box {
-  max-width: 992px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 1rem;
   width: 100%;
 }
 
-
-/*
-#header {
-  padding: 1.2rem 5rem;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
-  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
-  -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.41);
-}
-body{
-   transition: .3s;
-}
-.container {
-  padding: var(--space-lg);
-  margin: 3rem auto;
+.scroll_ghost {
+  min-height: calc(100vh - 30vh);
+  max-height: calc(100vh - 30vh);
   width: 100%;
-  max-width: 40rem;
-  border-radius: var(--radius-md);
-  background: var(--gray2);
-  color: var(--gray7);
+  height: 100%;
+  margin-top: var(--space-xs);
+  overflow: auto;
+  scrollbar-width: none;
 }
 
-.container__title {
-  text-align: center;
-  margin-bottom: 2rem;
-  font-size: 2.4rem;
+body.dark_mode .boxImage img {
+  filter: invert(0.9);
 }
-
-.container__intput_area {
-  gap: var(--space-sm);
-  flex-direction: column;
-}
-
-#list_input {
-  padding: var(--space-sm);
-  border-radius: var(--radius-sm);
-  border: 1px solid var(--gray1);
-  flex: 1;
-  width: 100%;
-}
-
-.wrapper_list {
-  margin-top: var(--space-lg);
-}
-
-.wrapper_list__title:first-child {
-  margin-bottom: var(--space-md);
-}
-
-.wrapper_list__title:not(:first-child) {
-  margin: var(--space-md) 0;
-}
-
-.wrapper_list__daily_list li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: var(--space-md);
-  border: 1px solid var(--gray4);
-  border-radius: var(--radius-xs);
-  margin-bottom: var(--space-md);
-}
-
-.wrapper_list__daily_list li span {
-  max-width: 30rem;}
-  /* ajuste conforme o layout 
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.wrapper_list__daily_list li.done span {
-  text-decoration: line-through;
-  color: #aaa;
-}
-
-.remove-btn {
-  background: none;
-  border: none;
-  color: #d00;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.flex {
-  display: flex;
-}
-@media (min-width: 1024px) {
-  #header {
-    padding: 2.4rem 15rem;
-  }
-  .container {
-    max-width: 60rem;
-  }
-  .container__intput_area {
-    gap: var(--space-sm);
-    flex-direction: row;
-  }
-} */
