--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -2,7 +2,7 @@
   max-width: 1200px;
   margin: 0 auto;
   justify-content: space-between;
-  padding: var(--space-xs);
+  padding: var(--space-xs) var(--space-sm);
 }
 
 .navbar_brand {
