--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
 @import url('./globals/base.css');
 @import url('./globals/colors.css');
+@import url('./pages/lists.css');
 @import url('./pages/home.css');
