--- a/src/css/templates/layout.css
+++ b/src/css/templates/layout.css
@@ -7,6 +7,7 @@
 @import url('../components/modal.css');
 @import url('../components/circle.css');
 @import url('../components/card.css');
+@import url('../components/loading.css');
 @import url('./header.css');
 
 .flex {
