--- a/src/css/components/listView.css
+++ b/src/css/components/listView.css
@@ -10,6 +10,8 @@
   position: relative;
   color: inherit;
   background: var(--color-bg-secondary);
+  min-height: 9rem;
+  height: 100%;
 }
 
 .list_view_item:last-child {
