--- a/src/css/components/loading.css
+++ b/src/css/components/loading.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background:#313131;
+  background: #313131;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,6 +17,11 @@
   color: var(--color-info);
   animation: spin 1s linear infinite;
   margin-bottom: 15px;
+}
+
+#loading p {
+  color: var(--color-white);
+  font-size: 1.8rem;
 }
 
 @keyframes spin {
