fix: header movel ajusta alinhamento dos itens no header modifica header para fizado quando necessario

--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -41,9 +41,18 @@
   margin-top: 1.2rem;
 }
 
+.btn_extasmall {
+  padding: var(--space-xs);
+}
+
 .btn_small {
   padding: var(--space-sm);
 }
+
+.btn_medium {
+  padding: var(--space-md);
+}
+
 
 .btn i {
   font-weight: 700;
