--- a/src/css/templates/layout.css
+++ b/src/css/templates/layout.css
@@ -39,7 +39,10 @@
   padding: 0 1rem;
   width: 100%;
 }
+main.space_to_header{
+  margin: 8rem auto;
 
+}
 .scroll_ghost {
   min-height: calc(100vh - 30vh);
   max-height: calc(100vh - 30vh);
