--- a/src/css/components/toggleTheme.css
+++ b/src/css/components/toggleTheme.css
@@ -1,23 +1,18 @@
-.toggle {
+.toggleTheme {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.toggle input[type='checkbox'] {
+.toggleTheme input[type='checkbox'] {
   height: 0;
   width: 0;
   visibility: hidden;
 }
-.toggle label svg#sun,
-.toggle label svg#moon {
-  width: var(--space-md);
-  fill: var(--color-text-primary);
-}
-.toggle label svg#sun,
-.toggle label svg#moon {
+.toggleTheme label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: all .3s;
   cursor: pointer;
-}
-.toggle .hidden {
-  display: none;
+  height: 100%;
 }
