--- a/src/css/templates/header.css
+++ b/src/css/templates/header.css
@@ -1,5 +1,13 @@
 header {
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.41);
-  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.41);
-  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.41);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+}
+
+header#fixed {
+  background-color: var(--color-bg-primary);
+  position: fixed;
+  z-index: 1000;
+  inset: 0;
+  height: 7rem;
 }
